# delia

./: .gitignore  DEVELOPMENT.md  README.md  biome.json  flake.nix  generate-test-file.sh  index.html  nuclear-launch-code.txt  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit
.papi/: polkadot-api.json
.papi/descriptors/: package.json
.papi/metadata/: polkaStorage.scale
delia/: biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
delia-rr/: Cargo.toml  README.md
delia-rr/src/: lib.rs
delia-server/: Cargo.toml  static
delia-server/src/: config.rs  http.rs  main.rs  swarm.rs
delia/src/: App.tsx  GlobalCtxProvider.tsx  main.tsx
delia/src/lib/: consts.ts  conversion.ts  registry.ts  requestResponse.ts  sign.ts
delia/src/pages/: Download.tsx
src/: App.jsx  App.tsx  GlobalCtx.tsx  GlobalCtxProvider.tsx  TimeBlockConverter.tsx  main.tsx
src/components/: Balance.tsx  Collapsible.tsx  ConnectWallet.tsx  DealProposalForm.tsx  FileUploader.tsx  MarketBalance.tsx  NavDropdown.tsx  ProviderSelector.tsx  ReceiptUploader.tsx  StorageDealFlow.jsx  Toast.tsx  Toaster.tsx  Tooltip.tsx  WsAddressInput.tsx
src/components/account/: AccountDropdown.tsx  BalancePanel.tsx  FaucetPanel.tsx  MarketDeposit.tsx  MarketDepositPanel.tsx  MarketPanel.tsx  MarketTopUp.tsx  MarketWithdrawal.tsx
src/components/buttons/: Button.tsx  ContinueButton.tsx  DownloadButton.tsx  FaucetButton.tsx  ProviderButton.tsx  RefreshButton.tsx
src/components/deal-proposal-form/: AccountSelector.tsx  DealProposalForm.tsx  DisabledInputInfo.tsx  DurationInput.tsx  HookDealProposalForm.tsx  Input.tsx  PieceUploader.tsx  ProviderSelector.tsx  (+2 more)
src/lib/: consts.ts  conversion.ts  dealProposal.ts  deals.ts  download.ts  fileUpload.ts  jsonRpc.ts  loadWrapper.ts  registry.ts  requestResponse.ts  resolvePeerIdMultiaddr.ts  retrieval.ts  sendTransaction.ts  sign.ts  storageProvider.ts  submissionReceipt.ts  time.ts  timeout.ts  transactionStatus.ts
src/pages/: Account.tsx  AccountSelector.tsx  DealPreparation.tsx  Download.tsx  FileRetrieval.tsx
src/utils/: constants.js
wasm-commp/: Cargo.toml
wasm-commp/pkg/: package.json  wasm_commp.d.ts  wasm_commp.js  wasm_commp_bg.js  wasm_commp_bg.wasm  wasm_commp_bg.wasm.d.ts
wasm-commp/src/: fr32_reader.rs  hasher.rs  lib.rs  zero_reader.rs
(+34 files in other folders)
