[package]
name = "delia-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.3", features = ["macros"] }
cbor4ii = { version = "1.0.0", features = ["serde1"] }
clap = { version = "4.5.35", features = ["derive"] }
futures = "0.3.31"
libp2p = { version = "0.54.1", features = [
    "noise",
    "yamux",
    "tcp",
    "kad",
    "macros",
    "tokio",
    "serde",
] }
multiaddr = "0.18.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = "0.7.14"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
