[package]
authors = ["aidan46"]
description = "WASM-based CommP calculation"
edition = "2021"
name = "wasm-commp"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
byte-slice-cast = "1.2.3"
primitives = { git = "https://github.com/eigerco/polka-storage/", package = "primitives", default-features = false }
rs_merkle = "1.5.0"
serde-wasm-bindgen = "0.6.5"
sha2 = "0.10.8"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[patch.'https://github.com/w3f/fflonk']
fflonk = { git = "https://www.github.com/w3f/fflonk", rev = "eda051ea3b80042e844a3ebd17c2f60536e6ee3f" }
